Fixed link to Google Forms

--- a/guide.html
+++ b/guide.html
@@ -231,8 +231,8 @@
             <a href="index.html"><i class="fas fa-home"></i> 首頁</a>
             <a href="app-download-page.html"><i class="fas fa-download"></i> 下載</a>
             <a href="guide.html"><i class="fas fa-book"></i> 使用說明</a>
-            <a href="https://forms.gle/4jPjR78tJ1E9f2L4A" target="_blank"><i class="fas fa-bug"></i> 錯誤回報</a>
-            <a href="https://forms.gle/q5p12c2292f2L2D48" target="_blank"><i class="fas fa-lightbulb"></i> 功能建議</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfyAod6vVINRLrikuu-LV5HcUKGkJdjd3W9o3eE8clgxALHzQ/viewform?usp=header" target="_blank"><i class="fas fa-bug"></i> 錯誤回報</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfyAod6vVINRLrikuu-LV5HcUKGkJdjd3W9o3eE8clgxALHzQ/viewform?usp=header" target="_blank"><i class="fas fa-lightbulb"></i> 功能建議</a>
         </nav>
 
         <div class="main-content">
@@ -417,4 +417,5 @@
         </footer>
     </div>
 </body>
+
 </html>
